--- a/index.html
+++ b/index.html
@@ -12,13 +12,79 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Raleway font from Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
+    <style>
+      .ring {
+        position: absolute;
+        stroke: url(#gold-gradient);
+        fill: none;
+        stroke-width: 1.5;
+        opacity: 0.85;
+        transform-origin: 50% 50%;
+        animation: ringWobble 3.5s ease-in-out infinite;
+      }
+      @keyframes ringWobble {
+        0%,
+        100% {
+          transform: rotate(0deg);
+        }
+        20% {
+          transform: rotate(-0.3deg);
+        }
+        50% {
+          transform: rotate(0.2deg);
+        }
+        80% {
+          transform: rotate(-0.05deg);
+        }
+      }
+    </style>
   </head>
 
   <body>
-    <div class="page-wrapper">
+    <!-- Decorative SVG golden rings background -->
+    <svg
+      width="100vw"
+      height="100vh"
+      style="position: fixed; top: 0; left: 0; z-index: 0; pointer-events: none"
+      viewBox="0 0 1000 1000"
+    >
+      <defs>
+        <linearGradient id="gold-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+          <stop
+            class="gold-gradient-animate"
+            offset="0%"
+            stop-color="#ffcc00"
+          />
+          <stop
+            class="gold-gradient-animate"
+            offset="100%"
+            stop-color="#d4af37"
+          />
+        </linearGradient>
+      </defs>
+      <!-- Top left corner -->
+      <circle class="ring" cx="60" cy="60" r="100" />
+      <!-- Top right corner -->
+      <circle class="ring" cx="1050" cy="-80" r="250" />
+      <!-- Bottom right corner -->
+      <circle class="ring" cx="1100" cy="1100" r="350" />
+    </svg>
+    <div class="page-wrapper" style="position: relative; z-index: 1">
       <!------- Header / Branding ------->
       <header class="site-header">
+        <!-- L'Oréal logo at the top -->
+        <img
+          src="img/loreal-logo.png"
+          alt="L'Oréal Logo"
+          class="site-logo"
+          style="max-width: 180px; margin-bottom: 18px"
+        />
         <h1 class="site-title">Smart Product Advisor</h1>
       </header>
 
