--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         width: 100vw;
         min-width: 100vw;
         max-width: 100vw;
-        height: 320px;
+        height: 220px;
         background: url("img/loreal-hero.jpeg") center center/cover no-repeat;
         position: relative;
         margin: 0;
@@ -64,7 +64,6 @@
         width: 100%;
         display: block;
         margin: 80px auto 0 auto;
-        border-radius: 12px;
         background: none;
         padding: 0;
         position: relative;
@@ -98,8 +97,8 @@
         margin-left: 16px;
         margin-right: 16px;
         box-sizing: border-box;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 90px;
+        padding-right: 90px;
       }
       .chat-window {
         width: 100%;
@@ -111,8 +110,8 @@
         background: #fafafa;
         white-space: pre-line;
         border: 1.5px solid #000;
-        border-radius: 20px;
-        margin-bottom: 20px;
+        border-radius: 0px;
+        margin-bottom: 0px;
         box-sizing: border-box;
       }
       .chat-form {
@@ -124,7 +123,7 @@
       }
       .chat-form input {
         font-size: 20px;
-        padding: 18px 20px;
+        padding: 15px 20px;
         width: 100%;
         box-sizing: border-box;
         margin: 0;
@@ -132,34 +131,6 @@
       .chat-form button {
         height: 56px;
         min-width: 56px;
-      }
-      /* Hide rings for now */
-      .ring {
-        display: none !important;
-      }
-      .ring {
-        position: absolute;
-        stroke: url(#gold-gradient);
-        fill: none;
-        stroke-width: 1.5;
-        opacity: 0.85;
-        transform-origin: 50% 50%;
-        animation: ringWobble 3.5s ease-in-out infinite;
-      }
-      @keyframes ringWobble {
-        0%,
-        100% {
-          transform: rotate(0deg);
-        }
-        20% {
-          transform: rotate(-0.3deg);
-        }
-        50% {
-          transform: rotate(0.2deg);
-        }
-        80% {
-          transform: rotate(-0.05deg);
-        }
       }
     </style>
   </head>
@@ -202,7 +173,7 @@
 
       <!------- Footer Links ------->
       <footer class="site-footer">
-        <p>&copy; 2025 L'Oreal Name. All rights reserved.</p>
+        <p>&copy; 2025 L'Oreal. All rights reserved.</p>
         <nav>
           <!-- These URLs are placeholders -->
           <a href="#">Privacy Policy</a>
